<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="ExtraText">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@drawable/bg_header_update_app"
            android:layout_alignParentBottom="true">
            <TextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/update_version_title"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:textSize="@dimen/title_main_component_text_size"
                android:layout_marginTop="@dimen/common_margin_top"
                android:layout_marginStart="@dimen/common_margin_top"/>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/ic_update_app"
            android:scaleType="fitXY"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:background="@drawable/bg_layout_update_app"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:cardCornerRadius="@dimen/medium_background_radius"
            app:cardElevation="@dimen/common_padding_small"
            android:layout_marginTop="@dimen/common_margin_top"
            android:layout_gravity="center_horizontal">
            <ImageView
                android:id="@+id/background_splash"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:textSize="@dimen/title_first_component_text_size"
            android:layout_marginTop="@dimen/common_padding_big"
            android:textColor="@color/black_totally"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/version_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:textSize="@dimen/title_second_component_text_size"
            android:layout_marginTop="@dimen/common_padding"
            android:textColor="@color/blackHighlight"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:text="@string/update_version_detail"
            android:textSize="@dimen/title_second_component_text_size"
            android:layout_marginTop="@dimen/common_margin_top"
            android:textColor="@color/blackHighlight"
            android:layout_marginStart="@dimen/common_margin_top_big"
            android:layout_marginEnd="@dimen/common_margin_top_big" />

        <Button
            android:id="@+id/btn_ok"
            android:background="@drawable/bg_button_update"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/update_version_button"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/white_totally"
            android:layout_marginTop="@dimen/common_margin_top"
            android:layout_marginBottom="@dimen/common_margin_top"
            android:layout_gravity="center_horizontal"
            android:paddingStart="@dimen/common_margin_top"
            android:paddingEnd="@dimen/common_margin_top"/>

    </LinearLayout>
</RelativeLayout>