<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:id="@+id/data_area"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/common_padding"
            android:layout_marginBottom="@dimen/common_padding"
            android:orientation="vertical">
            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/pull_to_refresh"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/data_list_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/no_data_error_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/center_image_size"
                android:layout_height="@dimen/center_image_size"
                android:src="@drawable/ic_no_file"/>

            <TextView
                android:id="@+id/no_data_error_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_pdf_found"
                android:layout_marginTop="@dimen/common_margin_top"
                android:textColor="@color/black_totally"
                android:textSize="@dimen/title_third_component_text_size" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/no_permission_area"
            style="@style/CommonButtonStyle"
            android:layout_width="@dimen/big_button_width"
            android:layout_height="@dimen/big_button_height"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:id="@+id/no_permission_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/title_third_component_text_size"
                android:text="@string/accept_permission_show_pdf"
                android:textColor="@color/whiteTotally"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/loading_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/loading_file_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/title_third_component_text_size"
                android:layout_marginTop="@dimen/common_margin_top_small"
                android:text="@string/loading_file_text"
                android:textColor="@color/black_totally"/>

            <ProgressBar
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="@dimen/common_margin_top_small"/>
        </LinearLayout>

    </RelativeLayout>

    <include
        android:id="@+id/banner_ads"
        layout="@layout/layout_banner_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/common_padding_big" />
</LinearLayout>
