<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_file_option"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        tools:ignore="ContentDescription">

        <ImageView
            android:id="@+id/more_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_pdf" />

        <ImageView
            android:id="@+id/more_print"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_print" />

        <ImageView
            android:id="@+id/more_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/more_print"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_upload" />

        <TextView
            android:id="@+id/more_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:textSize="@dimen/title_second_component_text_size"
            android:maxLines="1"
            android:layout_marginEnd="@dimen/common_padding_big"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@id/more_upload"
            app:layout_constraintStart_toEndOf="@id/more_icon"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Sample Locked File.pdf" />

        <TextView
            android:id="@+id/more_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="12dp"
            android:textColor="@color/gntGray"
            android:textSize="10sp"
            app:layout_constraintTop_toBottomOf="@id/more_name"
            app:layout_constraintStart_toEndOf="@id/more_icon"
            tools:ignore="SmallSp"
            tools:text="12 Apr 2021" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bg_border_line_common"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/common_padding_big">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/more_layout_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:paddingStart="30dp"
                android:foreground="?attr/selectableItemBackground"
                tools:ignore="ContentDescription">

                <ImageView
                    android:id="@+id/more_imageview_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_share" />

                <TextView
                    android:id="@+id/more_textview_share"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:layout_marginEnd="22dp"
                    android:layout_weight="1"
                    android:text="@string/menu_share"
                    android:textSize="@dimen/title_second_component_text_size"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/more_imageview_share"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/more_layout_rename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:paddingStart="30dp"
                android:foreground="?attr/selectableItemBackground"
                tools:ignore="ContentDescription">

                <ImageView
                    android:id="@+id/more_imageview_rename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_rename" />

                <TextView
                    android:id="@+id/more_textview_rename"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:layout_marginEnd="22dp"
                    android:layout_weight="1"
                    android:text="@string/menu_rename"
                    android:textSize="@dimen/title_second_component_text_size"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/more_imageview_rename"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/more_layout_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:paddingStart="30dp"
                android:foreground="?attr/selectableItemBackground"
                tools:ignore="ContentDescription">

                <ImageView
                    android:id="@+id/more_imageview_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_delete" />

                <TextView
                    android:id="@+id/more_textview_delete"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:layout_marginEnd="22dp"
                    android:layout_weight="1"
                    android:text="@string/menu_delete"
                    android:textSize="@dimen/title_second_component_text_size"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/more_imageview_delete"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>